controlador productos agregado

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 3000
-DB_URI = mongodb://localhost:27017/node_crud
+DB_URI = mongodb+srv://Peguero17:Adrian2517@cluster0.jjhes91.mongodb.net/WebStore
